--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -17,7 +17,7 @@ jobs:
           server_address: smtp.gmail.com
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
+          password: ${{ secrets.EMAIL_PASSWORD }} # If you have enabled 2FA then you need to generate an App password from Sercurity Sections on Google
           subject: 'GitHub Alert: Code Push or Pull Request'
           body: |
             A new push or pull request has been made to the repository.
