--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -26,4 +26,4 @@ jobs:
             Branch: ${{ github.ref }}
             Sender: ${{ github.actor }}
           to: 'intern61techcurve@gmail.com'  # Replace with the recipient's email
-          from: ${{ secrets.EMAIL_USERNAME }}  # Replace with the sender's email
+          from: ${{ secrets.EMAIL_USERNAME }}  # Replace with the sender's emai
