--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -28,7 +28,7 @@ jobs:
             Commit: ${{ github.event.head_commit.id }}
             Message: ${{ github.event.head_commit.message }}
             Pushed by: ${{ github.actor }}
-          to: 'intern61techcurve@gmail.com'
+          to: 'meru.techcurve@gmail.com'
           from: ${{ secrets.EMAIL_USERNAME }}
 
   notify-pull:
@@ -50,5 +50,5 @@ jobs:
             Branch: ${{ github.base_ref }}
             Action: ${{ github.event.action }}
             Pulled by: ${{ github.actor }}
-          to: 'intern61techcurve@gmail.com'
+          to: 'meru.techcurve@gmail.com'
           from: ${{ secrets.EMAIL_USERNAME }}
